wrapper application configured, can be started