@@ -48,29 +48,152 @@
 		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
 				<groupId>org.jetbrains.kotlin</groupId>
 				<artifactId>kotlin-maven-plugin</artifactId>
 				<configuration>
 					<args>
 						<arg>-Xjsr305=strict</arg>
 					</args>
-					<compilerPlugins>
-						<plugin>spring</plugin>
-					</compilerPlugins>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.jetbrains.kotlin</groupId>
-						<artifactId>kotlin-maven-allopen</artifactId>
-						<version>${kotlin.version}</version>
-					</dependency>
-				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*.properties</exclude>
+						<exclude>**/*.xml</exclude>
+						<exclude>**/*.conf</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>1.0</version>
+				<configuration>
+					<generateRepository>true</generateRepository>
+					<repoPath>lib</repoPath>
+					<repositoryLayout>flat</repositoryLayout>
+					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+					<assembleDirectory>${appassembler.basedir}</assembleDirectory>
+					<configurationDirectory>conf</configurationDirectory>
+					<showConsoleWindow>true</showConsoleWindow>
+					<defaultJvmSettings>
+						<initialMemorySize>512M</initialMemorySize>
+						<maxMemorySize>1024M</maxMemorySize>
+					</defaultJvmSettings>
+					<daemons>
+						<daemon>
+							<id>allround-simulator</id>
+							<mainClass>com.simulator.allround.SimulatorCoreApplicationKt</mainClass>
+							<platforms>
+								<platform>jsw</platform>
+							</platforms>
+							<generatorConfigurations>
+								<generatorConfiguration>
+									<generator>jsw</generator>
+									<configuration>
+										<property>
+											<name>wrapper.java.additional.1</name>
+											<value>-Xloggc:logs/gclog</value>
+										</property>
+										<property>
+											<name>wrapper.java.additional.2</name>
+											<value>-XX:+UseConcMarkSweepGC</value>
+										</property>
+										<property>
+											<name>wrapper.java.additional.3</name>
+											<value>-XX:MaxDirectMemorySize=512M</value>
+										</property>
+										<property>
+											<name>wrapper.java.additional.4</name>
+											<value>-XX:NewRatio=3</value>
+										</property>
+										<property>
+											<name>wrapper.java.additional.5</name>
+											<value>-XX:+PrintGCDetails</value>
+										</property>
+										<property>
+											<name>wrapper.java.additional.6</name>
+											<value>-XX:+PrintGCTimeStamps</value>
+										</property>
+										<property>
+											<name>wrapper.java.additional.7</name>
+											<value>-XX:+PrintGCDateStamps</value>
+										</property>
+										<property>
+											<name>wrapper.java.additional.8</name>
+											<value>-verbose:gc</value>
+										</property>
+										<property>
+											<name>configuration.directory.in.classpath.first</name>
+											<value>conf</value>
+										</property>
+										<property>
+											<name>set.default.REPO_DIR</name>
+											<value>lib</value>
+										</property>
+										<property>
+											<name>wrapper.logfile</name>
+											<value>logs/wrapper.log</value>
+										</property>
+									</configuration>
+									<includes>
+										<include>solaris-sparc-64</include>
+										<include>solaris-x86-64</include>
+										<include>linux-x86-64</include>
+									</includes>
+								</generatorConfiguration>
+							</generatorConfigurations>
+						</daemon>
+					</daemons>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>generate-daemons</goal>
+							<goal>create-repository</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.3</version>
+				<executions>
+					<execution>
+						<id>make-log-dir</id>
+						<phase>package</phase>
+						<configuration>
+							<tasks>
+								<mkdir dir="${appassembler.basedir}/logs"/>
+								<copy todir="${appassembler.basedir}/conf">
+									<fileset dir="src/main/resources"/>
+								</copy>
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
+
+	<properties>
+		<appassembler.basedir>target/generated-resources/appassembler/jsw/allround-simulator</appassembler.basedir>
+	</properties>
 
 </project>
